--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "email": "",
     "url": "https://github.com/rsmq-cli"
   },
-  "main": "./index.js",
+  "main": "./bin/rsmq.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/mpneuried/rsmq-cli.git"
@@ -23,7 +23,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "async": "0.9.x",
     "commander": "2.x",
+    "lodash": "0.3.x",
     "mpbasic": "0.0.x",
     "rsmq": "0.3.x"
   },
