--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "async": "0.9.x",
     "commander": "2.x",
     "lodash": "0.3.x",
+    "ini": "1.3.x",
     "mpbasic": "0.0.x",
     "rsmq": "0.3.x"
   },
