--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,15 @@ language: node_js
 node_js:
   - 0.10
   - 0.12
+  - 4.0
+  - 4.4
+  - 5.0
+  - 5.5
+  - 5.11
+  - 6.0
+  - 6.1
   - iojs
+  - node
 services:
   - redis-server
 before_script:
