--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "rsmq-cli",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A RSMQ terminal client",
-  "keywords": [],
+  "keywords": [ "rsmq", "redis", "cli", "terminal", "queue", "tool" ],
   "homepage": "https://github.com/mpneuried/rsmq-cli",
   "bugs": "https://github.com/mpneuried/rsmq-cli/issues",
   "author": {
@@ -23,24 +23,24 @@
   },
   "license": "MIT",
   "dependencies": {
-    "async": "0.9.x",
+    "async": "1.5.x",
     "commander": "2.x",
-    "lodash": "3.x",
+    "lodash": "4.x",
     "ini": "1.3.x",
     "mpbasic": "0.0.x",
-    "rsmq": "0.3.x"
+    "rsmq": "0.7.x"
   },
   "bin": {
     "rsmq": "./bin/rsmq.js"
   },
   "devDependencies": {
-    "should": "4.3.x",
-    "grunt": "0.4.x",
-    "grunt-regarde": "*",
-    "grunt-contrib-coffee": "*",
-    "grunt-include-replace": "*",
-    "grunt-mocha-cli": "*",
+    "should": "8.x",
+    "grunt": "1.0.x",
+    "grunt-contrib-watch": "1.x",
+    "grunt-contrib-coffee": "1.x",
+    "grunt-include-replace": "4.x",
+    "grunt-mocha-cli": "2.x",
     "grunt-docker": "0.0.x",
-    "grunt-contrib-clean": "*"
+    "grunt-contrib-clean": "1.0.0"
   }
 }
